# product-career-ops

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/pco/: SKILL.md
.claude/skills/pco/: SKILL.md
demo/: evidence.yml  product-career-ops-demo.xlsx  profile.yml  resume.md  sources.yml
demo/jobs/: kinetic-robotics.md  northstar-health.md  signalcare-ai.md
demo/opportunities/: kinetic-robotics.json  northstar-health.json  signalcare-ai.json
demo/packets/: kinetic-robotics.json  northstar-health.json  signalcare-ai.json
docs/: PRODUCT_PHILOSOPHY.md  PUBLIC_README.md  RESEARCH_LEDGER.md
docs/resources/: README.md  ai-product-management.md  books.md  courses-and-communities.md  frameworks.md  lennyhub-rag.md  newsletters-and-podcasts.md  regulated-and-digital-health.md
examples/: coaching.json  opportunity.json  packet.json  quarterly.json  synthetic-profile.yml  weekly.json
pco/: __init__.py  cli.py  config.py  documents.py  ids.py  io.py  privacy.py  scanner.py  schema.py  scoring.py  workbook.py
tests/: test_privacy.py  test_scoring.py  test_workbook.py
workflows/develop/: career-plan.md  coach.md  evidence.md  quarterly.md  skill-gap.md  weekly.md
workflows/search/: compare.md  evaluate.md  interview.md  offer.md  packet.md  scan.md  tracker.md
workflows/shared/: evidence.md  privacy.md
