[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "product-career-ops"
version = "0.1.0"
description = "Agent-first product leadership career operating system"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
  "PyYAML>=6,<7",
  "reportlab>=4,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
pco = "pco.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["pco*"]

